# EliteOS

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  bochsrc.txt  boot.asm
scripts/: .fuse_hidden0000002600000001  addmsg512.sh  build.sh  copytodisk.sh  debug.sh  run.sh
src/: boot.asm
